docs: update `README.md` with link to dataset, update `.gitignore`

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
-# exclude venv/ files
+#─FOLDERS─────────────────────────────────────────────────────
 venv/*
+archive/*
+
+#─FILES───────────────────────────────────────────────────────
+Manifest.toml
+*_checkpoints
+
+#to make local files for experiment
+*local*
+
+#─EXCEPTIONS───────────────────────────────────────────────────────
+# --
+#─────────────────────────────────────────────────────────────
