feat(data): create image dataset

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #─FOLDERS─────────────────────────────────────────────────────
 venv/*
 archive/*
+.vscode/*
 
 #─FILES───────────────────────────────────────────────────────
 *_checkpoints
