refactor: changed constructor function and cleared output
- Inserted fixed seed to better reproducibility
- After a lot of work and a lot of time passed, the number of layer and all other hyperparameters are too much work. Make the project simpler and faster. Only Dropout, learning rate and l2 reg are choosen to make the study of best hyperparameters, leaving kernel size, number of layers, optimizer and batch size for future updates.
- output figure for report with all species
-updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,11 @@ archive/*
 
 #─FILES───────────────────────────────────────────────────────
 *_checkpoints
+*.png
 
 #to make local files for experiment
 *local*
+*copy*
 
 #─EXCEPTIONS───────────────────────────────────────────────────────
 # --
